    Reported by Willy Wolff <willy.mh.wolff@gmail.com>.
  - Fixed a bug in syr2k that caused the kernel to perform twice the work.
    It was computing the full symmetric output whereas the BLAS version
    only computes one side of the symmetry.
  - Input generation for some of the kernels has been updated to produce
    fewer zeros in output.

-----------------
* Changes in 4.1:
-----------------
  - Added LICENSE.txt
  - Fixed a bug in documentation of cholesky. (Reported by François Gindraud)
  - Removed two statements from cholesky, which were useless with inplace
    memory allocation. (Reported by François Gindraud)
  - Updated polybench.R in utilities to match the change in input generation
    of lu/ludcmp/cholesky.
  - Simplified the macros for switching between data types.
      - Now users may specify DATA_TYPE_IS_XXX where XXX is one of
        FLOAT/DOUBLE/INT to change all macros associated with data types.
  - Fixed a typo in Jacobi-1d loop iterators.
  - Fixed issues with SCALAR_VAL macro in some kernels.
    (Reported by Sven Verdoolaege)
  - Fixed a typo in POLYBENCH_GFLOPS system.

-----------------
* Changes in 4.0:
-----------------

This is a detailed ChangeLog for PolyBench/C 4.0 to indicate all
changes made from version 3.2. Due to the high number of changes,
users should be warned the baseline performance of kernels available
in both PolyBench/C 3.2 and 4.0 may differ.


= General
  - tuned the initialization functions to reduce the possibility to have 'inf'
    in outputs. Specifically, the initial values are much closer to 1 for most
    linear algebra kernels now (was up to N in prior versions).
  - changed the name of predefined problem sizes STANDARD to MEDIUM.
  - changed the default dataset to LARGE.
  - added a few perl scripts to utilities.
  - replaced create_cpped_version.sh with a perl script.
  - fixed a bug in polybench.h when 4D arrays were allocated. (extra comma)
    (Reported by Amarin Phaosawasdi)